--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "@vercel/node": "^2.10.3",
     "dotenv-cli": "^7.2.1",
+    "google-spreadsheet": "^3.2.0",
     "telegraf": "^4.12.2"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
+    "@types/google-spreadsheet": "^3.3.2",
     "@types/node": "^18.15.11",
     "@vercel/ncc": "^0.36.1",
     "debug": "^4.3.4",
