--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@vercel/node": "^2.10.3",
     "dotenv-cli": "^7.2.1",
     "google-spreadsheet": "^3.2.0",
-    "telegraf": "^4.12.2"
+    "telegraf": "4.16.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
