--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "@vercel/node": "^2.10.3",
     "dotenv-cli": "^7.2.1",
+    "express": "^4.21.1",
     "google-spreadsheet": "^3.2.0",
     "telegraf": "4.16.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
+    "@types/express": "^5.0.0",
     "@types/google-spreadsheet": "^3.3.2",
     "@types/node": "^18.15.11",
     "@vercel/ncc": "^0.36.1",
@@ -24,6 +26,7 @@
   },
   "scripts": {
     "dev": "DEBUG=bot* dotenv -- nodemon -e ts -x ts-node src/index.ts",
+    "start": "NODE_ENV=production ts-node src/index.ts",
     "build": "ncc build src/index.ts -o public -m",
     "prettier": "prettier --write 'src/**/*.ts'"
   }
